--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify Player</title>
+    <title>VonFire Player</title>
     <link
       rel="icon"
       href="https://imgs.search.brave.com/On682SE5xZ1Fw8JPf6yaR_O5T1SiJkEMY2AfeLVcpo4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy83/Lzc0L1Nwb3RpZnlf/QXBwX0xvZ28uc3Zn"
